[package]
authors = ["Simon Bernier St-Pierre <git@sbstp.ca>"]
edition = "2018"
name = "sulaco"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
nix = "0.22"
serde = {version = "1", features = ["derive", "rc"]}
serde_yaml = "0.8"
tokio = {version = "1", features = ["full"]}

[profile.dev]
debug = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
